# jmaxml

./: .gitignore  LICENSE  README.md  pyproject.toml
jmaxml/: __init__.py  client.py  fastapi_app.py  geojson.py  notify.py  pandas.py
jmaxml/cli/: main.py
jmaxml/feed/: __init__.py  watcher.py
jmaxml/models/: __init__.py
jmaxml/parser/: __init__.py
jmaxml/storage/: __init__.py
sample/: basic_parse.py  earthquake_monitor.py  geojson_export.py  notify_test.py  pandas_analysis.py  report_checker.py  storage_demo.py
tests/: test_coverage.py  test_features.py  test_jmaxml.py
