[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jmaxml"
version = "1.0.0"
description = "気象庁防災情報XML SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kasam"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
fastapi = ["fastapi>=0.100", "uvicorn>=0.20"]
notify = ["win11toast>=0.36"]
all = [
    "pandas>=1.5",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "win11toast>=0.36",
]

[project.urls]
Homepage = "https://github.com/Kasam/jmaxml"

[project.scripts]
jmaxml = "jmaxml.cli.main:main"

[tool.setuptools.packages.find]
include = ["jmaxml*"]
